# argos3-webviz

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO  codecov.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
client/: README.md  index.html  log.html  server.py
client/css/: main.css  reset.css
client/entities/: Footbot.js  KheperaIV.js  Light.js
client/examples/: VR.html  index.html
client/examples/js/: VRButton.js
client/font/: fontello.eot
client/fonts/: webviz-font.eot
client/js/: main.js  three_scene.js  websockets.js
client/js/entities/: Box.js  Cylinder.js  DefaultEntity.js  Floor.js  Footbot.js  KheperaIV.js  Light.js  loadEntities.js
client/js/libs/: jquery.contextMenu.min.js
client/models/: KheperaIV.gltf  KheperaIV.json
cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSPackaging.cmake  cmake_uninstall.cmake
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLING_FROM_SOURCE.md  README.md  basic_usage.md  controlling_experiment.md  custom_entity_clientside.md  custom_entity_serverside.md  developing_webviz.md  sending_data_from_client.md  sending_data_from_server.md  writing_custom_client.md
include/: networkapi_server.h
libs/loguru/: CMakeLists.txt
src/: CMakeLists.txt  networkapi.cpp  networkapi.fwd.h  networkapi.h  networkapi_server.cpp  networkapi_server.h  networkapi_webserver.cpp  networkapi_webserver.h
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  AddGoogleTests.cmake  CodeCoverage.cmake  CppcheckTargets.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindARGoSPlugin.cmake  uninstall.cmake
src/helpers/: CTimer.h  EExperimentState.h  LogStream.h  Timer.h  utils.h
src/libs/loguru/: loguru.cpp
src/packaging/darwin/: distribution.xml
src/plugins/: CMakeLists.txt
src/plugins/simulator/: CMakeLists.txt
src/plugins/simulator/visualizations/: CMakeLists.txt
src/plugins/simulator/visualizations/network-api/: CMakeLists.txt  networkapi.cpp  networkapi.fwd.h  networkapi.h  networkapi_webserver.cpp  networkapi_webserver.fwd.h  networkapi_webserver.h
src/plugins/simulator/visualizations/network-api/entity/: networkapi_box.cpp  networkapi_box.h  networkapi_cylinder.cpp  networkapi_floor.cpp  networkapi_footbot.cpp  networkapi_kheperaiv.cpp  networkapi_light.cpp
src/plugins/simulator/visualizations/network-api/helpers/: EExperimentState.h  LogStream.h  utils.h
src/plugins/simulator/visualizations/network-api/libs/loguru/: loguru.hpp
src/plugins/simulator/visualizations/network-api/utility/: CTimer.h  LogStream.h  utils.h
src/plugins/simulator/visualizations/webviz/: CMakeLists.txt  config.h.in  webviz.cpp  webviz.h  webviz_fileserver.cpp  webviz_fileserver.h  webviz_user_functions.cpp  webviz_user_functions.h  webviz_webserver.cpp  webviz_webserver.h
src/plugins/simulator/visualizations/webviz/assets/: index.html
src/plugins/simulator/visualizations/webviz/assets/css/: main.css
src/plugins/simulator/visualizations/webviz/assets/entities/: Cylinder.js  DefaultEntity.js
src/plugins/simulator/visualizations/webviz/assets/js/: robust-websocket.js  websocket-as-promised.js
src/plugins/simulator/visualizations/webviz/entity/: webviz_box.cpp  webviz_cylinder.cpp  webviz_floor.cpp  webviz_footbot.cpp  webviz_kheperaiv.cpp  webviz_light.cpp
src/plugins/simulator/visualizations/webviz/utility/: CTimer.h  EExperimentState.h  LogStream.h  PortCheck.h  base64.h
src/testing/: CMakeLists.txt  diffusion_10.argos  testexperiment.argos  user_functions_test.argos
src/testing/controllers/: CMakeLists.txt  diffusion.cpp  diffusion.h  footbot_diffusion.cpp  footbot_diffusion.h
src/testing/loop_functions/: CMakeLists.txt  user_loop_functions.cpp  user_loop_functions.h
src/tests/: CMakeLists.txt
src/tests/experiments/: CMakeLists.txt
src/tests/experiments/empty_experiment/: CMakeLists.txt  empty.argos
src/tests/modules/: CMakeLists.txt
src/tests/modules/utility/: base64.cpp  experimentstate.cpp  logstream.cpp  portcheck.cpp  timer.cpp
tests/: diffusion_10.argos
tests/controllers/: footbot_diffusion.cpp
